tests/errors/type_check/function/extern_fn_with_bad_param_type.sim
extern fn foo(x: Nope);