tests/errors/type_check/function/extern_fn_with_bad_param_type.err.expected
error: at 1:15: [TC-InvalidDeclaredType] In function 'foo', parameter 'x': Use of undeclared type 'Nope'
   |
 1 | extern fn foo(x: Nope);
   |               ^^^^^^^
